--- a/web_server/home.html
+++ b/web_server/home.html
@@ -18,7 +18,7 @@
       <p><a href="{{ parse6 }}">Test 6 - muliple links + garbage</a></p>
       <p><a href="{{ parse7 }}">Test 7 - multiple links to same location</a></p>
       <p><a href="{{ parse8 }}">Test 8 - link in source code</a></p>
-      <p><a href="http://thispagedoesnotexist.com">Test 9 - links to non-existant page, should result in 404 error</a></p>
+      <p><a href="{{ parse9 }}">Test 9 - links to non-existant page</a></p>
 
     <h3>Crawler</h3>
       <p><a href="{{ graph1 }}">Test 1 - one node</a></p>
